// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceHeader should add the "squashed"-class when the sidebar is opened 1`] = `
<div class="space-header oc-p-m oc-flex space-header-squashed">
  <div class="space-header-image">
    <div class="space-header-image-default oc-flex oc-flex-middle oc-flex-center">
      <span class="oc-icon oc-icon-xxl oc-icon-passive oc-px-m oc-py-m">
        <!---->
      </span>
    </div>
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h2 class="space-header-name" translate="no"></h2>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <space-context-actions-stub actionoptions="[object Object]"></space-context-actions-stub>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container" translate="no"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`SpaceHeader space image should show the default image if no other image is set 1`] = `
<div class="space-header oc-p-m oc-flex">
  <div class="space-header-image">
    <div class="space-header-image-default oc-flex oc-flex-middle oc-flex-center">
      <span class="oc-icon oc-icon-xxl oc-icon-passive oc-px-m oc-py-m">
        <!---->
      </span>
    </div>
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h2 class="space-header-name" translate="no"></h2>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <space-context-actions-stub actionoptions="[object Object]"></space-context-actions-stub>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container" translate="no"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`SpaceHeader space image should show the set image 1`] = `
<div class="space-header oc-p-m oc-flex">
  <div class="space-header-image">
    <img alt="" class="oc-cursor-pointer">
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h2 class="space-header-name" translate="no"></h2>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!--v-if-->
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <space-context-actions-stub actionoptions="[object Object]"></space-context-actions-stub>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container" translate="no"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;
